# RealTime-Edge-Viewer

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/realtime_edge_viewer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/realtime_edge_viewer/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/realtime_edge_viewer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web-viewer/: index.html  package-lock.json  package.json
web-viewer/src/: main.ts  style.css
